objects/Veda_Fraud_Individual_Name_Indicator__c.object
<CustomObject>
    <fields>
        <fullName>Bureau_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bureau Result</label>
        <referenceTo>Veda_Fraud_Bureau_Result__c</referenceTo>
        <relationshipName>Individual_Name_Indicators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Electoral_Roll_Result_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Electoral Roll Result List</label>
        <referenceTo>Veda_Electoral_Roll_Result_List__c</referenceTo>
        <relationshipName>Individual_Name_Indicators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Family_Name_Indicator_Match_Initial__c</fullName>
        <label>Family Name Indicator Match Initial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Name_Indicator__c</fullName>
        <label>Family Name Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Given_Name_Indicator_Match_Initial__c</fullName>
        <label>First Given Name Indicator Match Initial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Given_Name_Indicator__c</fullName>
        <label>First Given Name Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Name_Indicator__c</fullName>
        <label>Individual Name Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Given_Name_Indicator_Match_Initial__c</fullName>
        <label>Other Given Name Indicator Match Initial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Given_Name_Indicator__c</fullName>
        <label>Other Given Name Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda Fraud Individual Name Indicator</label>
    <nameField>
        <label>IndividualNameIndicator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda Fraud Individual Name Indicator</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>